# oktoberfest-bot

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.example.json  tents.json
oktoberfest_bot/: config_loader.py  main.py  state_manager.py
oktoberfest_bot/notifiers/: base_notifier.py  telegram.py
oktoberfest_bot/scrapers/: base_scraper.py  form_select.py
src/: __init__.py  main.py  state_manager.py
src/notifiers/: __init__.py
src/scrapers/: __init__.py  base_scraper.py  schuetzenfestzelt.py
systemd/: oktoberfest-bot.service.example
