[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oktoberfest-bot"
version = "1.0.0"
description = "Monitor Oktoberfest tent reservation pages for availability"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
oktoberfest-bot = "oktoberfest_bot.main:main"

[project.urls]
Homepage = "https://github.com/leoniewagner/oktoberfest-bot"
Repository = "https://github.com/leoniewagner/oktoberfest-bot"

[tool.setuptools.packages.find]
where = ["."]
include = ["oktoberfest_bot*"]
